[package]
name = "badtouch"
version = "0.7.1"
description = "Scriptable network authentication cracker"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/badtouch"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/badtouch" }

[dependencies]
#hlua = "0.4"
#hlua-badtouch = { path="../hlua/hlua" }
hlua-badtouch = "0.4.2"
log = "0.4"
env_logger = "0.7"
pbr = "1.0"
threadpool = "1.7"
colored = "1.6"
humantime = "1.1"
structopt = "0.3"
failure = "0.1"
time = "0.1.35"
atty = "0.2"
rand = "0.7"
getch = "0.2"
toml = "0.5"
libc = "0.2"
nix = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bufstream = "0.1.3"
regex = "1.0.1"

md-5 = "0.8"
sha-1 = "0.8"
sha2 = "0.8"
sha3 = "0.8"
digest = "0.8"
hmac = "0.7"
base64 = "0.11"
bcrypt = "0.6"

reqwest = "0.9"
mysql = "17"
ldap3 = "0.6"
kuchiki = "0.7"
twox-hash = "1.1"
dirs = "2.0"

[target."cfg(unix)".dependencies]
termios = "0.3"

[target.'cfg(target_os="linux")'.dependencies]
rlimit = "0.3"
