[package]
name = "authoscope"
version = "0.8.1"
description = "Scriptable network authentication cracker"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/authoscope"
categories = ["command-line-utilities"]
default-run = "authoscope"
readme = "README.md"
edition = "2018"

[dependencies]
#hlua = "0.4"
#hlua-badtouch = { path="../hlua/hlua" }
hlua-badtouch = "0.4.2"
log = "0.4"
env_logger = "0.10"
pbr = "1.0"
threadpool = "1.7"
colored = "2"
humantime = "2"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.4.4"
anyhow = "1"
time = "0.3"
rand = "0.8"
getch = "0.3"
toml = "0.8"
nix = "0.27"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
bufstream = "0.1.3"
regex = "1.0.1"

md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
digest = "0.10"
hmac = "0.12"
data-encoding = "2.5.0"
bcrypt = "0.15"

reqwest = { version="0.11", features=["blocking", "json"] }
mysql = "24"
ldap3 = "0.11"
kuchiki = "0.8"
dirs = "5"
num-format = "0.4.0"

[target."cfg(unix)".dependencies]
termios = "0.3"

[target.'cfg(target_os="linux")'.dependencies]
rlimit = "0.10"
